--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -56,7 +56,7 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.md"
 exclude_filter=""
 export_path="../../../Users/lrkoe/Desktop/unmasked_export/Unmasked_1.0.1.exe"
 patches=PackedStringArray()
