--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,9 +6,9 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=".md"
+include_filter="*.md"
 exclude_filter=""
-export_path="../../../Users/lrkoe/Desktop/unmasked_export/Web/Unmasked_1.0.0.html"
+export_path="../../../Users/lrkoe/Desktop/unmasked_export/Web_1.1.0/index.html"
 patches=PackedStringArray()
 patch_delta_encoding=false
 patch_delta_compression_level_zstd=19
@@ -58,7 +58,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.md"
 exclude_filter=""
-export_path="../../../Users/lrkoe/Desktop/unmasked_export/Unmasked_1.0.1.exe"
+export_path="../../../Users/lrkoe/Desktop/unmasked_export/Unmasked_1.1.0.exe"
 patches=PackedStringArray()
 patch_delta_encoding=false
 patch_delta_compression_level_zstd=19
